# dear-implot.hs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Main.hs  README.md  cabal.project  dear-implot.cabal  imgui
src/DearImGui/: Context.hs  Enums.hs  Generator  Generator.hs  Plot.hs  Structs.hs
src/DearImGui/Plot/: Context.hs  Enums.hs  Generator.hs  Structs.hs
src/DearImGui/Plot/Generator/: Parser.hs
src/DearImGui/Raw/: Context.hs  Plot.hs
