cabal-version: 3.0
name: dear-implot
version: 1.0.0
build-type: Simple

library
  exposed-modules:
    DearImGui.Raw.Plot
    DearImGui.Plot
  other-modules:
    DearImGui.Plot.Generator
    DearImGui.Plot.Generator.Parser
    DearImGui.Plot.Context
    DearImGui.Plot.Enums
    DearImGui.Plot.Structs
    --- from imgui via symlink:
    DearImGui.Generator
    DearImGui.Generator.Parser
    DearImGui.Generator.Tokeniser
    DearImGui.Generator.Types
    DearImGui.Structs
    DearImGui.Enums
    DearImGui.Context
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  cxx-sources:
    implot/implot.cpp
    implot/implot_items.cpp
  cxx-options:
    -std=c++11
  extra-libraries:
    stdc++
  include-dirs:
    implot
    dear-imgui.hs/imgui
  build-depends: base
               , StateVar
               , containers
               , dear-imgui >= 1.4.0
               , inline-c
               , inline-c-cpp
               , managed
               , template-haskell
               , directory
               , filepath
               , text
               , megaparsec
               , parser-combinators
               , scientific
               , unordered-containers
               , th-lift
               , transformers
               , vector
               , unliftio
