cabal-version: 3.0
name: dear-implot
version: 1.0.0
build-type: Simple
extra-source-files:
  README.md,
  CONTRIBUTING.md,
  implot/*.h,
  implot/LICENSE,
  dear-imgui.hs/imgui/*.h,
  dear-imgui.hs/imgui/LICENSE.txt

flag use-wchar32
  description:
    Use 32-bit for ImWchar (default is 16-bit) to support unicode planes 1-16. (e.g. point beyond 0xFFFF like emoticons, dingbats, symbols, shapes, ancient languages, etc...)
  default:
    True
  manual:
    True

flag use-ImDrawIdx32
  description:
    Use 32-bit vertex indices (default is 16-bit) is one way to allow large meshes with more than 64K vertices.
    Your renderer backend will need to support it (most example renderer backends support both 16/32-bit indices).
    Another way to allow large meshes while keeping 16-bit indices is to handle ImDrawCmd::VtxOffset in your renderer.
    Read about ImGuiBackendFlags_RendererHasVtxOffset for details.
  default:
    True
  manual:
    True

library
  exposed-modules:
    DearImGui.Raw.Plot
    DearImGui.Plot
  other-modules:
    DearImGui.Plot.Generator
    DearImGui.Plot.Generator.Parser
    DearImGui.Plot.Context
    DearImGui.Plot.Enums
    DearImGui.Plot.Structs
    --- from imgui via symlink:
    DearImGui.Generator
    DearImGui.Generator.Parser
    DearImGui.Generator.Tokeniser
    DearImGui.Generator.Types
    DearImGui.Structs
    DearImGui.Enums
    DearImGui.Raw.Context
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -Wderiving-defaults -Wmissing-deriving-strategies -static -dynamic-too
  install-includes:
    implot/implot.h
    implot/implot_internal.h
    imgui/imgui.h
    imgui/imgui_internal.h
    imgui/imstb_rectpack.h
    imgui/imstb_textedit.h
    imgui/imstb_truetype.h
  cxx-sources:
    implot/implot.cpp
    implot/implot_demo.cpp
    implot/implot_items.cpp
  cxx-options:
    -std=c++11 -DIMGUI_DEFINE_MATH_OPERATORS
  cpp-options:
    -std=c++11
  include-dirs:
    implot
    dear-imgui.hs/imgui

  if flag(use-wchar32)
    cxx-options: -DIMGUI_USE_WCHAR32
    cpp-options: -DIMGUI_USE_WCHAR32

  if flag(use-ImDrawIdx32)
    cxx-options: "-DImDrawIdx=unsigned int"
    cpp-options: "-DImDrawIdx=unsigned int"

  build-depends: base
               , StateVar
               , containers
               , dear-imgui == 2.1.3
               , inline-c
               , inline-c-cpp
               , managed
               , template-haskell
               , directory
               , filepath
               , text
               , megaparsec
               , parser-combinators
               , scientific
               , unordered-containers
               , th-lift
               , transformers
               , vector
               , unliftio
               , system-cxx-std-lib

executable test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    ghc-options: -threaded -rtsopts

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.3.0
      , dear-imgui == 2.1.3
      , dear-implot
      , gl
      , sdl2
      , managed
      , ghc-events
      , machines
      , text
      , optparse-applicative
      , network
      , containers
      , bytestring
      , stm
      , random
    hs-source-dirs:   .
    default-language: Haskell2010
